--- a/app/globals.css
+++ b/app/globals.css
@@ -236,8 +236,25 @@
       @apply border-gradient p-0.5 rounded-2xl flex-1 sm:basis-1/2 w-full h-[400px] max-md:hidden;
     }
 
+    /* Applies once the call is active/connecting */
+    .call-active-border {
+      @apply border-2 border-success-100 shadow-lg shadow-success-100/20;
+    }
+
+    .user-speaking-border {
+      @apply border-2 border-success-100 shadow-lg shadow-success-100/20;
+    }
+
     .card-content {
       @apply flex flex-col gap-2 justify-center items-center p-7 dark-gradient rounded-2xl min-h-full;
+    }
+
+    .user-avatar {
+      @apply z-10 flex items-center justify-center relative;
+
+      .animate-speak {
+        @apply absolute inline-flex size-5/6 animate-ping rounded-full bg-success-100 opacity-75;
+      }
     }
   }
 
